# aiogram_broadcaster

./: .coveragerc  .editorconfig  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pypi-publish.yml  tests.yml
aiogram_broadcaster/: __init__.py  broadcaster.py  chat_manager.py  data.py  default.py  default_properties.py  event.py  event_logs.py  event_manager.py  exceptions.py  l10n.py  logger.py  loggers.py  mailer.py  messenger.py  models.py  placeholder.py  pool.py  sender.py  settings.py  statistic.py  status.py  storage.py  task.py  task_manager.py  trigger.py  types_.py
aiogram_broadcaster/contents/: __init__.py  adapter.py  animation.py  audio.py  base.py  chat_action.py  contact.py  dice.py  document.py  from_chat.py  from_chat_copy.py  from_chat_copy_message.py  from_chat_copy_messages.py  from_chat_forward.py  from_chat_forward_message.py  from_chat_forward_messages.py  game.py  invoice.py  key_based.py  lazy.py  location.py  mapping.py  media_group.py  message.py  message_copy.py  message_forward.py  message_send.py  paid_media.py  photo.py  poll.py  sticker.py  text.py  venue.py  video.py  video_note.py  voice.py
aiogram_broadcaster/contents/adapters/: __init__.py  lazy.py  mapped.py
aiogram_broadcaster/enums/: __init__.py  status.py  strategy.py
aiogram_broadcaster/event/: __init__.py  event.py  manager.py  observer.py  registry.py
aiogram_broadcaster/intervals/: __init__.py  base.py  period.py  simple.py
aiogram_broadcaster/mailer/: __init__.py  chat_engine.py  chat_manager.py  chats.py  container.py  group.py  mailer.py  multiple.py  pool.py  sender.py  settings.py  statistic.py  status.py  task_manager.py  tasks.py
aiogram_broadcaster/placeholder/: __init__.py  decorators.py  item.py  manager.py  placeholder.py  registry.py
aiogram_broadcaster/placeholder/items/: __init__.py  base.py  jinja.py  regexp.py  string.py
aiogram_broadcaster/storage/: __init__.py  base.py  file.py  mongodb.py  record.py  redis.py  sqlalchemy.py
aiogram_broadcaster/storages/: __init__.py  base.py  file.py  mongodb.py  redis.py  sqlalchemy.py
aiogram_broadcaster/utils/: callable_model.py  chain.py  common_types.py  discriminated_model.py  exceptions.py  id.py  id_generator.py  interrupt.py  lazy_importer.py  logger.py  retry_after_handler.py  sleep.py  union_model.py
aiogram_broadcaster/utils/events/: destroy_on_complete.py  retry_after_handler.py
butcher/: __main__.py  normaiizer.py  normalizer.py  parser.py  targets.py  template.py
examples/: bot_blocked.py  dynamic_mailing.py  events.py  key_based_content.py  lazy_content.py  mapped_content.py  mre.py  multibot.py  multilingual.py  personalized_contents.py  placeholders.py  setup_master.py
tests/: test_event.py  test_placeholder.py
tests/test_contents/: test_base.py  test_contents.py  test_key_based.py  test_lazy.py
tests/test_event/: test_manager.py  test_observer.py  test_registry.py
tests/test_mailer/: test_settings.py  test_task_manager.py
tests/test_placeholder/: test_item.py  test_manager.py  test_placeholder.py  test_registry.py
tests/test_utils/: test_chain.py  test_interrupt.py
