[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "aiogram_broadcaster"
description = "A lightweight aiogram-based library for broadcasting Telegram messages."
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "LORES" }
]
maintainers = [
    { name = "LORES" }
]
dynamic = [
    "version"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
keywords = [
    "api",
    "asyncio",
    "boadcasting",
    "bot",
    "broadcast",
    "broadcaster",
    "framework",
    "mailing",
    "mailing-system",
    "telegram",
    "wrapper"
]
dependencies = [
    "aiogram>=3.7.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "types-aiofiles>=23.2.0"
]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-lazy-fixtures>=1.0.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.0"
]
redis = [
    "redis[hiredis]>=5.0.0"
]
mongo = [
    "motor>=3.0.0"
]
sqlalchemy = [
    "SQLAlchemy>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/loRes228/aiogram_broadcaster.git"
Documentation = "https://github.com/loRes228/aiogram_broadcaster#readme"
"Source code" = "https://github.com/loRes228/aiogram_broadcaster.git"
"Issue Tracker" = "https://github.com/loRes228/aiogram_broadcaster/issues"


[tool.hatch.version]
path = "aiogram_broadcaster/__meta__.py"


[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 99
output-format = "full"
preview = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "ALL"
]
extend-select = [
    "ANN204" # missing-return-type-special-method
]
ignore = [
    "D", # pydocstyle
    "CPY", # flake8-copyright
    "FA", # flake8-future-annotations
    "ANN", # flake8-annotations
    "EM", # flake8-errmsg
    "ICN", # flake8-import-conventions
    "TRY003", # raise-vanilla-args
    "PLR6301", # no-self-use
    "PLR0904", # too-many-public-methods
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-locals
    "PLR0915", # too-many-statements
    "PLR0916", # too-many-boolean-expressions
    "PLR0917", # too-many-positional
    "PLR1702" # too-many-nested-blocks
]
logger-objects = [
    "aiogram_broadcaster.utils.loggers.pool",
    "aiogram_broadcaster.utils.loggers.mailer"
]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = [
    "S101" # assert
]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.lint.pylint]
allow-magic-value-types = []

[tool.ruff.lint.flake8-type-checking]
strict = true


[tool.mypy]
python_version = "3.8"
cache_dir = ".cache/mypy"
strict = true
show_error_context = true
show_column_numbers = true
pretty = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]


[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = "tests"
asyncio_mode = "auto"
addopts = "-vv"


[tool.coverage.run]
data_file = ".cache/.coverage"
parallel = true

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod"
]
